--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@capacitor/core": "3.4.3",
     "@ionic-native/camera": "^5.15.1",
     "@ionic-native/core": "^5.15.1",
     "@ionic-native/splash-screen": "^5.15.1",
@@ -49,6 +50,7 @@
     "@angular/compiler": "~8.2.11",
     "@angular/compiler-cli": "~8.2.11",
     "@angular/language-service": "~8.2.11",
+    "@capacitor/cli": "3.4.3",
     "@ionic/angular-toolkit": "^2.0.0",
     "@types/jasmine": "^3.4.4",
     "@types/jasminewd2": "^2.0.8",
