--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.4.3",
+    "@capacitor/haptics": "1.1.4",
+    "@capacitor/keyboard": "1.2.2",
+    "@capacitor/status-bar": "1.0.8",
     "@ionic-native/camera": "^5.15.1",
     "@ionic-native/core": "^5.15.1",
     "@ionic-native/splash-screen": "^5.15.1",
